# EUAI

./: .gitignore  BUILD_INSTRUCTIONS.md  CLAUDE.md  CMakeLists.txt  COMPLETION_SUMMARY.md  EUAI_DOCUMENTATION.md  Makefile  README.md  USING_EUAI.md  push.sh
.claude/: settings.local.json
config/: cache.db  router_rules.json  system_prompt.txt
euai/: requirements.txt  start_euai.sh  stop_euai.sh
euai/api/: __init__.py  models.py  runner.py  server.py
euai/config/: euai.env  knowledge.json  model.json  system_prompt.txt  vocab.json
euai/python/: __init__.py  chat.py  data_prep.py  export.py  requirements.txt  tokenizer_build.py  train.py
knowledge/: about_jayed.txt  about_me.txt  euai_info.txt
llama.cpp/: CMakeLists.txt  Makefile
llama.cpp/common/: http.h
src/: main.cpp
src/core/: attention.cpp  attention.h  matrix.cpp  matrix.h  model.cpp  model.h  tokenizer.cpp  tokenizer.h
src/inference/: engine.cpp  engine.h  kvcache.cpp  kvcache.h
src/knowledge/: knowledge_store.cpp  knowledge_store.h
src/router/: cache.cpp  cache.h  classifier.cpp  classifier.h  math_engine.cpp  math_engine.h  router.cpp  router.h  safety.cpp  safety.h
test/: test_main.cpp
